s/PCAP_ERRBUFF_SIZE/PCAP_ERRBUF_SIZE/ (fatal typo)

--- a/pcap.3
+++ b/pcap.3
@@ -100,7 +100,7 @@ in
 and
 .B pcap_lookupnet()
 is assumed to be able to hold at least
-.B PCAP_ERRBUFF_SIZE
+.B PCAP_ERRBUF_SIZE
 chars.
 .PP
 .B pcap_open_live()
