--- a/pcap.3
+++ b/pcap.3
@@ -347,15 +347,17 @@ closes the ``savefile.''
 .SH SEE ALSO
 tcpdump(1), tcpslice(1)
 .SH AUTHORS
+The original authors are:
+.LP
 Van Jacobson,
 Craig Leres and
 Steven McCanne, all of the
 Lawrence Berkeley National Laboratory, University of California, Berkeley, CA.
 .LP
-The current version is available from "The Tcpdump Group"'s Web site at
+It is currently being maintained by tcpdump.org.
 .LP
 .RS
 .I http://www.tcpdump.org/
 .RE
 .SH BUGS
-Please send bug reports to patches@tcpdump.org.
+Please send bug reports to tcpdump-workers@tcpdump.org.
