--- a/pcap.3
+++ b/pcap.3
@@ -335,6 +335,8 @@ closes the ``savefile.''
 .SH SEE ALSO
 tcpdump(1), tcpslice(1)
 .SH AUTHORS
+The original authors are:
+.LP
 Van Jacobson,
 Craig Leres and
 Steven McCanne, all of the
@@ -346,4 +348,14 @@ The current version is available from "The Tcpdump Group"'s Web site at
 .I http://www.tcpdump.org/
 .RE
 .SH BUGS
-Please send bug reports to patches@tcpdump.org.
+Please send problems, bugs, questions, desirable enhancements, etc. to:
+.LP
+.RS
+tcpdump-workers@tcpdump.org
+.RE
+.LP
+Please send source code contributions, etc. to:
+.LP
+.RS
+patches@tcpdump.org
+.RE
