By default, don't include DEPLIBS in the libraries flags, as a dynamically-linked libpcap should have been linked with them (if there are any of them), so it shouldn't be necessary for a program or library to explicitly link with them if it links with libpcap.
Add a -static flag that includes DEPLIBS, as, on most if not all
platforms, static libraries can't be linked with dynamic libraries, so
programs would have to link with libraries on which libpcap depends if
it links statically with libpcap.

If both --cflags and --libs are given, print both sets of flags, on the
same line (as pkg-config does).

--- a/pcap-config.1
+++ b/pcap-config.1
@@ -20,12 +20,15 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP-CONFIG 1 "23 September 2008"
+.TH PCAP-CONFIG 1 "26 March 2009"
 .SH NAME
 pcap-config \- write libpcap compiler and linker flags to standard output
 .SH SYNOPSIS
 .na
 .B pcap-config
+[
+.B \-\-static
+]
 [
 .B \-\-cflags | \-\-libs
 ]
@@ -50,5 +53,11 @@ and
 linker required to link with libpcap, including
 .B \-l
 flags for libraries required by libpcap.
+.LP
+By default, it writes flags appropriate for compiling with a
+dynamically-linked version of libpcap; the
+.B \-\-static
+flag causes it to write flags appropriate for compiling with a
+statically-linked version of libpcap.
 .SH "SEE ALSO"
 pcap(3PCAP)
