--- a/README
+++ b/README
@@ -80,7 +80,7 @@ information on configuring that option.
 Note to Linux distributions and *BSD systems that include libpcap:
 
 There's now a rule to make a shared library, which should work on Linux 
-and *BSD (and OS X).
+and *BSD, among other platforms.
 
 It sets the soname of the library to "libpcap.so.1"; this is what it 
 should be, *NOT* libpcap.so.1.x or libpcap.so.1.x.y or something such as 
