One more change.

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Summary for 1.2.1 libpcap release
 	Fail if pcap_activate() is called on an already-activated
 	 pcap_t, and add a test program for that.
 	Fix filtering in pcap-ng files.
+	Don't build for PowerPC on Mac OS X Lion.
 
 Sunday  July 24, 2011.  mcr@sandelman.ca.
 Summary for 1.2 libpcap release
