--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Saturday June 30, 2012 guy@alum.mit.edu
+Summary for 1.3.1 libpcap release
+	Fix pcap-config to include -lpthread if canusb support is
+	    present
+
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
         Handle DLT_PFSYNC in {FreeBSD, other *BSD+Mac OS X, other}.
