--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ Summary for 1.3.1 libpcap release
 	    present
 	Try to fix "pcap_parse not defined" problems when --without-flex
 	    and --without-bison are used when you have Flex and Bison
+	Fix some issues with the pcap_loop man page.
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
