--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@ Summary for 1.3.1 libpcap release
 	Try to fix "pcap_parse not defined" problems when --without-flex
 	    and --without-bison are used when you have Flex and Bison
 	Fix some issues with the pcap_loop man page.
+	Fix pcap_getnonblock() and pcap_setnonblock() to fill in the
+	    supplied error message buffer
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
