--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,9 @@ Summary for 1.3.1 libpcap release
 	Fix some issues with the pcap_loop man page.
 	Fix pcap_getnonblock() and pcap_setnonblock() to fill in the
 	    supplied error message buffer
+	Fix typo that, it appeared, would cause pcap-libdlpi.c not to
+	    compile (perhaps systems with libdlpi also have BPF and use
+	    that instead)
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
