--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ Summary for 1.3.1 libpcap release
 	Fix typo that, it appeared, would cause pcap-libdlpi.c not to
 	    compile (perhaps systems with libdlpi also have BPF and use
 	    that instead)
+	Catch attempts to call pcap_compile() on a non-activated pcap_t
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
