--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Saturday June 30, 2012 guy@alum.mit.edu
+Saturday August 18, 2012 guy@alum.mit.edu
 Summary for 1.3.1 libpcap release
 	Fix pcap-config to include -lpthread if canusb support is
 	    present
@@ -12,6 +12,7 @@ Summary for 1.3.1 libpcap release
 	    that instead)
 	Catch attempts to call pcap_compile() on a non-activated pcap_t
 	Fix crash on Linux with CAN-USB support without usbfs
+	Fix addition of VLAN tags for Linux cooked captures
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
