--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,9 @@ Summary for 1.3.1 libpcap release
 	Catch attempts to call pcap_compile() on a non-activated pcap_t
 	Fix crash on Linux with CAN-USB support without usbfs
 	Fix addition of VLAN tags for Linux cooked captures
+	Check for both EOPNOTSUPP and EINVAL after SIOCETHTOOL ioctl, so
+	    that the driver can report either one if it doesn't support
+	    SIOCETHTOOL
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
