--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Thursday November 29, 2012 guy@alum.mit.edu
+Summary for 1.4.0 libpcap release
+	Add netfilter/nfqueue interface.
+	If we don't have support for IPv6 address resolution, support,
+	    in filter expressions, what IPv6 stuff we can.
+
 Wednesday November 28, 2012 guy@alum.mit.edu
 Summary for 1.3.1 libpcap release
 	Fix pcap-config to include -lpthread if canusb support is
