--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Summary for 1.4.0 libpcap release
 	Add netfilter/nfqueue interface.
 	If we don't have support for IPv6 address resolution, support,
 	    in filter expressions, what IPv6 stuff we can.
+	Checks added for malloc()/realloc()/etc. failures.
 
 Wednesday November 28, 2012 guy@alum.mit.edu
 Summary for 1.3.1 libpcap release
