--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Monday March 18, 2013 guy@alum.mit.edu
+Monday March 26, 2013 guy@alum.mit.edu
 Summary for 1.4.0 libpcap release
 	Add netfilter/nfqueue interface.
 	If we don't have support for IPv6 address resolution, support,
@@ -29,6 +29,7 @@ Summary for 1.4.0 libpcap release
 	    kernels, for VLAN tag valid flag
 	Clean up some man pages
 	Support libnl3 as well as libnl1 and libnl2 on Linux
+	Fix handling of Bluetooth devices on 3.x Linux kernels
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
