--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Monday March 26, 2013 guy@alum.mit.edu
+Saturday April 6, 2013 guy@alum.mit.edu
 Summary for 1.4.0 libpcap release
 	Add netfilter/nfqueue interface.
 	If we don't have support for IPv6 address resolution, support,
@@ -30,6 +30,7 @@ Summary for 1.4.0 libpcap release
 	Clean up some man pages
 	Support libnl3 as well as libnl1 and libnl2 on Linux
 	Fix handling of Bluetooth devices on 3.x Linux kernels
+	Fixed build on Solaris 11
 
 Friday  March 30, 2012.  mcr@sandelman.ca
 Summary for 1.3.0 libpcap release
