remove stray file and update README
.gitignore supercedes .cvsignore, CVS is no more available and LBL URL
has changed.

--- a/README
+++ b/README
@@ -10,9 +10,6 @@ Please send inquiries/comments/reports to:
 Anonymous Git is available via:
 	git clone git://bpf.tcpdump.org/libpcap
 
-Version 1.x.y of LIBPCAP can be retrieved with the CVS tag "libpcap_1_{x}rel{y}":
-	cvs -d :pserver:tcpdump@cvs.tcpdump.org:/tcpdump/master checkout -r libpcap_1_{x}rel{y} libpcap
-
 Please submit patches by forking the branch on GitHub at
 
 	http://github.com/the-tcpdump-group/libpcap/tree/master
@@ -21,7 +18,7 @@ and issuing a pull request.
 
 formerly from 	Lawrence Berkeley National Laboratory
 		Network Research Group <libpcap@ee.lbl.gov>
-		ftp://ftp.ee.lbl.gov/libpcap.tar.Z (0.4)
+		ftp://ftp.ee.lbl.gov/old/libpcap-0.4a7.tar.Z
 
 This directory contains source code for libpcap, a system-independent
 interface for user-level packet capture.  libpcap provides a portable
