--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Saturday  Jul. 19, 2014 mcr@sandelman.ca
+  Summary for 1.6.1 tcpdump release
+	some fixes for the any device
+	changes for how --enable-XXX works
+
 Wednesday Jul. 2, 2014 mcr@sandelman.ca
   Summary for 1.6.0 tcpdump release
         Don't support D-Bus sniffing on OS X
