--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Monday Jul. 28, 2014 guy@alum.mit.edu
+  Summary for 1.6.2 tcpdump release
+	Don't crash on filters testing a non-existent link-layer type
+	    field.
+
 Saturday  Jul. 19, 2014 mcr@sandelman.ca
   Summary for 1.6.1 tcpdump release
 	some fixes for the any device
