--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -271,6 +271,7 @@ FILES
 CHANGES		- description of differences between releases
 ChmodBPF/*	- Mac OS X startup item to set ownership and permissions
 		  on /dev/bpf*
+CMakeLists.txt	- CMake file
 CREDITS		- people that have helped libpcap along
 INSTALL.txt	- this file
 LICENSE		- the license under which tcpdump is distributed
@@ -370,7 +371,6 @@ pcap_*.3pcap	- manual entries for library functions
 pcap-filter.4	- manual entry for filter syntax
 pcap-linktype.4	- manual entry for link-layer header types
 ppp.h		- Point to Point Protocol definitions
-runlex.sh	- wrapper for Lex/Flex
 savefile.c	- offline support
 scanner.l	- filter string scanner
 sunatmpos.h	- definitions for SunATM capturing
