--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,9 @@ Wednesday, Jan. 25, 2017 guy@alum.mit.edu
       aggregation enabled)
     Fix compilation error in DAG support
     Fix issues with CMake configuration
+    Add support for stream buffers larger than 2GB on newer DAG cards
+    Remove support for building against DAG versions without STREAMS
+      support (before dag-3.0.0 2007)
 
 Tuesday, Oct. 25, 2016 mcr@sandelman.ca
   Summary for 1.8.1 libpcap release
