--- a/README
+++ b/README
@@ -1,18 +1,15 @@
+To report a security issue please send an e-mail to security@tcpdump.org.
+
+To report bugs and other problems, contribute patches, request a
+feature, provide generic feedback etc please see the file
+CONTRIBUTING in the libpcap source tree root.
+
 LIBPCAP 1.x.y
-
+Now maintained by "The Tcpdump Group"
 www.tcpdump.org
-
-Please send inquiries/comments/reports to:
-	tcpdump-workers@lists.tcpdump.org
 
 Anonymous Git is available via:
 	git clone git://bpf.tcpdump.org/libpcap
-
-Please submit patches by forking the branch on GitHub at
-
-	http://github.com/the-tcpdump-group/libpcap/tree/master
-
-and issuing a pull request.
 
 formerly from 	Lawrence Berkeley National Laboratory
 		Network Research Group <libpcap@ee.lbl.gov>
@@ -86,20 +83,6 @@ that.
 We've been maintaining binary compatibility between libpcap releases for
 quite a while; there's no reason to tie a binary linked with libpcap to
 a particular release of libpcap.
-
-Problems, bugs, questions, desirable enhancements, etc. should be sent
-to the address "tcpdump-workers@lists.tcpdump.org".  Bugs, support
-requests, and feature requests may also be submitted on the GitHub issue
-tracker for libpcap at
-
-	https://github.com/the-tcpdump-group/libpcap/issues
-
-Source code contributions, etc. should be sent to the email address
-above or submitted by forking the branch on GitHub at
-
-	http://github.com/the-tcpdump-group/libpcap/tree/master
-
-and issuing a pull request.
 
 Current versions can be found at www.tcpdump.org.
 
